@@ -119,6 +119,7 @@ DJ  91- sqrtn(Mod(13,112),6) -> o loop [instead of 'bad input' error]
         addprimes(360000000029);
         #thue(x^2+1,500009*500029* 360000000029* 2^100) -> 0 [instead of 32]
     94- factor(257377849,100) -> [61,2; 69169,1] instead of  [61,2; 263,2]
+    95- addprimes() creates issues with nffactor [wrong results].
 
   Changed
      1- [libpari] rename rootsof1 -> nfrootsof1
